--- a/rust/jeu_50missions/Cargo.toml
+++ b/rust/jeu_50missions/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jeu_fifty_missions"
+name = "jeu_50missions"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,4 +8,6 @@ name = "50missions"
 path = "src/main.rs"
 
 [dependencies]
+fastrand="2"
 common = { path = "../common" }
+smallvec = "1.15.1"
