--- a/rust/jeu_50missions/Cargo.toml
+++ b/rust/jeu_50missions/Cargo.toml
@@ -8,7 +8,11 @@ name = "50missions"
 path = "src/main.rs"
 
 [dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+bincode = "1"
+
 fastrand="2"
 common = { path = "../common" }
-smallvec = "1.15.1"
+smallvec = { version = "1", features = ["serde"] }
 indicatif = "0.18.3"
